--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@atomist/sdm-core": "1.8.0-dynamic-goals.20191108100909",
     "@atomist/sdm-pack-node": "^1.1.1",
     "@atomist/sdm-pack-spring": "^2.0.1",
+    "@atomist/sdm-pack-version": "^0.1.1-master.20191106215058",
     "@atomist/slack-messages": "^1.1.1",
     "fs-extra": "^8.1.0"
   },
@@ -62,7 +63,7 @@
     "clean:test": "rimraf .nyc_output coverage",
     "compile": "run-s git:info compile:ts",
     "compile:ts": "tsc --project .",
-    "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc index.ts lib",
+    "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc index.ts",
     "git:info": "atm-git-info",
     "lint": "tslint --config tslint.json --format verbose --project .",
     "lint:fix": "npm run lint -- --fix",
