--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,19 +9,14 @@
     "declarationMap": true,
     "sourceMap": true,
     "lib": ["DOM"],
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": [
-    "index.ts",
-    "bin/*.ts",
-    "lib/**/*.ts",
-    "test/**/*.ts",
-  ],
+  "include": ["index.ts", "bin/*.ts", "lib/**/*.ts", "test/**/*.ts"],
   "exclude": [".#*"],
   "compileOnSave": true,
   "buildOnSave": false,
