--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@atomist/sdm-core": "1.8.0-dynamic-goals.20191108100909",
     "@atomist/sdm-pack-node": "^1.1.1",
     "@atomist/sdm-pack-spring": "^2.0.1",
-    "@atomist/sdm-pack-version": "^0.1.1-master.20191106215058",
+    "@atomist/sdm-pack-version": "^0.1.1",
     "@atomist/slack-messages": "^1.1.1",
     "fs-extra": "^8.1.0"
   },
